--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link type="text/css" rel="stylesheet" href="JD.css">
+    <link type="text/css" rel="stylesheet" href="CSS/JD.css">
 </head>
 <body>
     <form action="demo.php" method="GET"></form>
